--- a/index2.html
+++ b/index2.html
@@ -14,9 +14,14 @@
 </head>
 <body>
 
-<h1 class="titre">Saint Valentin <span class="ann_2">2<span class="ann">0<span class="ann_2">2<span class="ann">4</span></span></h1>
+    <audio autoplay>
+        <source src="audio/unwritten.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 
-<img id="img" src="img/main.jpg" class="rounded mx-auto d-block" alt="...">
+    <h1 class="titre">Saint Valentin <span class="ann_2">2<span class="ann">0<span class="ann_2">2<span class="ann">4</span></span></h1>
+
+    <img id="img" src="img/main.jpg" class="rounded mx-auto d-block" alt="...">
 
 
 </body>
