--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
+
 
 <h1 class="titre">Saint Valentin <span class="ann_2">2<span class="ann">0<span class="ann_2">2<span class="ann">4</span></span></h1>
 
 <h3 class="titre tit">Veux-tu être ma <span class="ann_2">Valentine</span> ?</h3>
 
-<button id="button" type="button"><a href="index2.html">Oui</a></button>
+
+<div id="cont">
+    <div class="id">
+        <a href="index2.html"><img src="img/oui.png" class="pass"></a>
+    </div>
+
+    <div class="id">
+        <a href="#"><img src="img/non.png" class="pass"></a>
+    </div>
+</div>
 
 </body>
 </html>
